New 0x) inference tests! Meditron & Med42

--- a/configs/prompts/prompt_comp2.yml
+++ b/configs/prompts/prompt_comp2.yml
@@ -1,3 +1,3 @@
 type: completion
 name: Complete IE explanation v2
-content:  "For medical students: Infective Endocarditis is a"  
+content: "Targeted regular medical students: Infective Endocarditis (IE) is a"  
