--- a/configs/models/meditron_large.yml
+++ b/configs/models/meditron_large.yml
@@ -1,27 +1,27 @@
-download_status: STARTED
+download_status: UNINITIALIZED
 experiment_date: 09/03/2024
-framework: pt
-hf_repo: wanglab/ClinicalCamel-70B
-local: ''
-name: Clinical Camel
-model_params:
-  load_in_4bit: False
-  load_in_8bit: True
+framework: tf
 gen_params:
   max_new_tokens: 500
   repetition_penalty: 1.1
   temperature: 0.1
   top_k: 0
   top_p: 0.15
+hf_repo: epfl-llm/meditron-70b
+local: ''
+model_params:
+  load_in_4bit: true
+  load_in_8bit: false
+name: Meditron-70B-v1.0
 properties:
   access_space:
-  - local
+  - local, hf_api
   cost:
   - free in price
   - power consumption
   domain: medical
   predecessor: llama-70b
   size: '70'
-  task: instruction following
-revision: 1670df1
-weightpat: '*.bin'
+  task: base LLM
+revision: 3b41343
+weightpat: '*.safetensors'
