--- a/configs/models/med_42.yml
+++ b/configs/models/med_42.yml
@@ -1,12 +1,18 @@
-download_status: COMPLETED
-experiment_date: 09/03/2024
+download_status: UNINITIALIZED
+experiment_date: '2024-07-06 11:47:37.613840'
 framework: pt
 gen_params:
+  length_penalty:
+  - -1.0
+  - 0.0
+  - 1.0
   max_new_tokens: 512
-  repetition_penalty: 1.1
-  temperature: 0.2
-  top_k: 5
-  top_p: 0.15
+  num_beams: 2
+  repetition_penalty:
+  - 1.0
+  - 1.5
+  - 2.0
+  temperature: 0.65
 hf_repo: m42-health/med42-70b
 local: ''
 model_params:
