--- a/configs/prompts/prompt_med42_5.yml
+++ b/configs/prompts/prompt_med42_5.yml
@@ -15,12 +15,8 @@ content: |
     - Profile: A MEDICAL_STUDENT learning advanced diagnostic management and treatment strategies for the disease.
     - Style expectations: Detailed medical insights and clinical guideline focus expressed by a rigorous, selective tone.
 
-  [ YOUR STATUS ]
-  Tomorrow, you will have a lecture to give! Ask the user about the academic level you have to be ready for. Then, explain the disease carefully to students of that selected profile by preparing a concise textual description in less than 100 words.
-  Ah! I would almost forget to tell you the NOTES below.
-
   [ NOTES ]
   - You still have time to think about the disorder's topics separately, and only then write your text!
   - Use always medical language. The complexity of that usage must conform to the degree of your audience.
-  <|prompter|>: Academic Level: ADVANCED_MEDICAL_STUDENT
-  <|assistant|>: Infective Endocarditis (IE) is 
+  <|prompter|>: Explain me the disease as if I was a ADVANCED_MEDICAL_STUDENT.
+  <|assistant|>: 
