--- a/configs/models/llama2_70b.yml
+++ b/configs/models/llama2_70b.yml
@@ -1,18 +1,21 @@
-download_status: UNINITIALIZED
-experiment_date: '2024-07-07 12:19:49.841632'
+download_status: COMPLETED
+experiment_date: '2024-07-09 16:10:45.736623'
 framework: tf
 gen_params:
   length_penalty:
-  - -1.0
-  max_new_tokens: 512
-  num_beams: 2
+  - 1.0
+  min_new_tokens: 54
+  max_new_tokens: 252
+  num_beams: 1
   repetition_penalty:
   - 1.0
-  temperature: 0.65
+  temperature: 1.0
   top_k:
-  - 5
+  - 50
   top_p:
-  - 0.15
+  - 1.0
+  early_stopping:
+  - false
 hf_repo: meta-llama/Llama-2-70b-chat-hf
 local: ''
 model_params:
