--- a/configs/models/llama2_7b.yml
+++ b/configs/models/llama2_7b.yml
@@ -1,5 +1,5 @@
-download_status: COMPLETED
-experiment_date: '2024-07-07 17:39:31.025022'
+download_status: STARTED
+experiment_date: '2024-07-09 11:31:42.422631'
 framework: tf
 gen_params:
   max_new_tokens: 512
